--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="active"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Home</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Sing up</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Sing up</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Login</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
